--- a/templates/base.html
+++ b/templates/base.html
@@ -1,104 +1,76 @@
-{% spaceless %}
 {% load static %}
-{% load compress %}
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-      <!--Import materialize.css-->
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="{% block description %}Esqueleto do Projeto{% endblock %}">
+    <meta name="author" content="{% block author %}Ikke/14{% endblock %}">
 
+    <title>{% block title %}Início{% endblock %} - Projeto</title>
 
-	<!--link rel="apple-touch-icon" sizes="57x57" href="/static/images/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/static/images/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/static/images/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/static/images/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/static/images/apple-touch-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/static/images/apple-touch-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/static/images/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/static/images/apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/static/images/apple-touch-icon-180x180.png">
-	<meta name="apple-mobile-web-app-title" content="WazLog">
-	<link rel="icon" type="image/png" href="/static/images/favicon-192x192.png" sizes="192x192">
-	<link rel="icon" type="image/png" href="/static/images/favicon-160x160.png" sizes="160x160">
-	<link rel="icon" type="image/png" href="/static/images/favicon-96x96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="/static/images/favicon-16x16.png" sizes="16x16">
-	<link rel="icon" type="image/png" href="/static/images/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/static/images/favicon-96x96.png">
-	<meta name="msapplication-TileColor" content="#2b5797">
-	<meta name="msapplication-TileImage" content="/static/images/mstile-144x144.png"-->
-	<meta name="application-name" content="HackInPOA">
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	
+	<link href="{% static 'css/tema.css' %}" rel="stylesheet">
 
-        {% compress css %}
-            <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.css' %}" media="screen,projection"/>
-            <link type="text/css" rel="stylesheet" href="{% static 'css/custom.css' %}" media="screen,projection"/>
-        {% endcompress %}
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
 
-        <title>HackInPOA - {% block title %}Bem Vindo{% endblock %}</title>
-    </head>
+  <body>
 
-    <body>
-      <!--Import jQuery before materialize.js-->
-
-      {% compress js %}
-          <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
-          <script type="text/javascript" src="{% static 'js/materialize.js' %}"></script>
-      {% endcompress %}
-
-      {% include 'menu.html' %}
-
-    <main class="container">
-        {%  block content %}{%  endblock %}
-    </main>
-
-
-    <footer>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-              <h5 class="white-text">Nome do Projeto</h5>
-
-              <p class="white-text">Slogan e descricão bonitinha do projeto e de algo que fazemos.</p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-              <a href="https://www.positivessl.com" style="font-family: arial; font-size: 10px; color: #212121; text-decoration: none;"><img src="https://www.positivessl.com/images-new/PositiveSSL_tl_trans2.png" alt="SSL Certificate" title="SSL Certificate" border="0" /></a>
-
-            <!--h5 class="white-text">Links</h5>
-              <li><a class="grey-text lighten-3" href="http://www.google.com.br">Google</a></li>
-              <li><a class="grey-text lighten-3" href="http://www.facebook.com">Facebook</a></li>
-              <li><a class="grey-text lighten-3" href="http://www.orkuts.com.br">Orkuts</a></li> -->
-          </div>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="{% url 'index' %}">Esqueleto</a>
         </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="{% url 'index' %}">Início</a></li>
+            {% if user.is_authenticated %}
+				<li><a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Logout</a></li>
+			{% else %}
+				<li><a href="{% url 'signup' %}">Cadastre-se</a></li>
+				<li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
+			{% endif %}
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-      <div class="footer-copyright">
-        <div class="container">
-            © 2015 HackInPOA
-        <!--a class="grey-text lighten-4 right" href="#!">More Links</a-->
-        </div>
+    </div>
+
+    <div class="container">
+	
+
+      <div class="starter-template">
+		{% if messages %}
+			<ul class="messages">
+				{% for message in messages %}
+				<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+				{% endfor %}
+			</ul>
+		{% endif %}
+		
+	  	{% block content %}
+		{% endblock %}
       </div>
-    </footer>
+	
+	
+    </div><!-- /.container -->
 
-    <script>
-        $(document).ready(function(){
-              $(".button-collapse").sideNav();
-              $('.tooltipped').tooltip({"delay": 50});
-              $('.dropdown-button').dropdown();
-        });
-    </script>
-    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'TRACKER_ID', 'auto');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-
-</script>
-
-{% block extrajs %}{% endblock %}
-
-  </html>
-{% endspaceless %}
+    {% block extrajs %}{% endblock %}
+  </body>
+</html>
