--- a/templates/base/login.html
+++ b/templates/base/login.html
@@ -1,53 +1,31 @@
 {% extends "base.html" %}
 
+{% block title %}Entrar{% endblock %}
 {% block content %}
 
-    <h1 class="orange-text header center">Entrar no Sistema</h1>
 
-    <p>Preencha o formulário abaixo com seu nome de usuário e senha.</p>
+<h1>Login</h1>
+<p>Efetue seu login para acessar o sistema.</p>
 
 {% if form.errors %}
-    <div class="row">
-    <div class="col s12 12">
-      <div class="card-panel red">
-        <span class="white-text">
-            Usuário ou senha inválido. Tente novamente.
-        </span>
-      </div>
-    </div>
-  </div>
-
-
+<p>Seu usuário ou senha não combinam. Tente novamente</p>
 {% endif %}
 
-<form method="post" class="col s12" action="{% url 'django.contrib.auth.views.login' %}">
+<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
 {% csrf_token %}
+<table class='table'>
+<tr>
+    <td>{{ form.username.label_tag }}</td>
+    <td>{{ form.username }}</td>
+</tr>
+<tr>
+    <td>{{ form.password.label_tag }}</td>
+    <td>{{ form.password }}</td>
+</tr>
+</table>
 
-    <div class="input-field col s12">
-        {{ form.username }}
-        {{ form.username.label_tag }}
-    </div>
-
-    <div class="input-field col s12">
-        {{ form.password }}
-        {{ form.password.label_tag }}
-    </div>
-
- <button class="btn waves-effect waves-light" type="submit" name="action">Logar
-    <i class="mdi-content-send right"></i>
-  </button>
-
+<input class='btn btn-primary' type="submit" value="login" />
 <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
-{% endblock %}
-
-{% block extrajs %}
-    {% if messages %}
-    <script>
-        {% for message in messages %}
-            Materialize.toast("{{message}}", 8000, 'rounded');
-        {% endfor %}
-    </script>
-    {% endif %}
 {% endblock %}
