--- a/templates/base/profile.html
+++ b/templates/base/profile.html
@@ -1,1 +1,8 @@
 {% extends 'base.html' %}
+
+{% block title %}{{ user.username }}{% endblock %}
+
+{% block content %}
+	<h1>Olá {{ user.username }}!</h1>
+	<p class="lead">Você está logado.</p>	
+{% endblock %}
