--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">Esqueleto</a>
+          <a class="navbar-brand" href="{% url 'index' %}">MotoTrip</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -49,6 +49,7 @@
       </div>
     </div>
 
+<br><br><br>
     <div class="container">
 	
 
