--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -4,7 +4,13 @@
 {% block content %}
 	<h1>Criar Grupo</h1>
 
-	{{ form }}
-
+	<form method='post' action='{% url "group_create" %}'>
+		<table class='table'>
+			{{ form }}
+		</table>
+	
+		<button class='btn btn-primary'>Cadastrar</button>
+		{% csrf_token %}
+	</form>
 	
 {% endblock %}
