- add initial code for home

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,281 +1,8 @@
-body {
-    /*background: #c8e6c9;*/
-}
+body { background: url(../img/bg.jpg) no-repeat top ; background-size: cover; font-family: 'Lato', sans-serif; font-size: 16px; }
+.navbar.navbar-default{ padding: 10px; background-color: rgba(78,93,108,0.3); }
+ul.navbar-nav { margin-top: 20px; }
+h1 { font-size: 40px; font-weight: bold; }
+h2 { font-size: 20px; font-weight: bold; }
 
-footer {
-    width: 100%;
-    position: relative;
-    bottom: 0;
-    left: 0;
-}
-
-nav, footer {
-    background: #2196F3;
-}
-
-.card-header h2 {
-    margin: 0;
-    font-size: 2rem;
-    font-weight: 300;
-    display: inline;
-    position: absolute;
-    float: center; /* If you want it to be centered */
-    top: 30px;
-    line-height: 2rem;
-}
-
-.card {
-    background: white;
-}
-
-.card-header img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin: 10px;
-}
-
-.card-content {
-    font-size: 1.2rem;
-    font-weight: 300;
-    padding-top: 0px !important;
-}
-
-.card-action {
-    text-align: right;
-}
-
-.active a {
-    color: white;
-}
-
-.dropdown-content .active {
-    background: #2196F3;
-    color: white;
-}
-
-.card a {
-    margin-right: 0px;
-}
-
-.pricetab {
-    width: 20%;
-    min-width: 200px;
-    /*background: linear-gradient(#555, #444);*/
-    float: left;
-    margin-top: .2%;
-    box-shadow: 1px 1px 5px rgba(0, 0, 0, .5);
-
-}
-
-.pricetabmid {
-    width: 20%;
-    min-width: 200px;
-    float: left;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 1);
-    position: relative;
-}
-
-.priceheader {
-    width: 100%;
-    height: 60px;
-    background-image: -o-linear-gradient(bottom, #444, #555);
-    background-image: -webkit-linear-gradient(bottom, #444, #555);
-    background-image: -o-linear-gradient(bottom, #444, #555);
-    background-image: -moz-linear-gradient(bottom, #444, #555);
-    background-image: linear-gradient(to bottom, #444, #555);
-    box-shadow: 0 2px 12px rgba(0, 0, 0, .5);
-}
-
-.price {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    border: 1px solid #ff9547;
-    margin: 5% auto 0 auto;
-    text-align: center;
-}
-
-.pricemid {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    border: 1px solid #444;
-    margin: 5% auto 0 auto;
-    text-align: center;
-}
-
-.infos {
-    margin-top: 10%;
-}
-
-.pricefooter {
-    width: 100%;
-    margin-top: 10%;
-    text-align: center;
-    /* background:#333; */
-}
-
-.pricefootermid {
-    width: 100%;
-    margin-top: 10%;
-    text-align: center;
-}
-
-.author {
-    width: 10%;
-    min-width: 150px;
-    height: 40px;
-    background: rgba(0, 0, 0, .5);
-    overflow: hidden;
-    clear: both;
-    float: right;
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    -moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -ms-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-}
-
-.author:hover {
-    background: rgba(0, 0, 0, .8);
-}
-
-.author:hover .credit {
-    margin-left: 10%;
-}
-
-/* Typo */
-.title {
-    font-family: arial;
-    color: #fff;
-    font-size: 38px;
-    font-weight: normal;
-    text-align: center;
-    text-transform: uppercase;
-    text-shadow: 1px 2px 5px rgba(0, 0, 5, 0.2);
-    margin: auto;
-}
-
-.pricetab > h1, .pricetabmid > h1, .price > h1 {
-    font-size: 16px;
-    color: #fff;
-    text-align: center;
-    line-height: 3;
-}
-
-.pricetab > h2, .pricetabmid > h2, .price > h2, .pricemid > h2 {
-    text-align: center;
-    font-size: 34px;
-    color: #fff;
-}
-
-sub {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.infos > h3, .pricetabmid > h3, .price > h3, .pricemid > h3 {
-    font-size: 14px;
-    font-weight: normal;
-    text-align: center;
-    color: #fff;
-    line-height: 1;
-}
-
-.button a {
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-    text-decoration: none;
-    line-height: 3;
-}
-
-.buttonmid a {
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-    text-decoration: none;
-    line-height: 3;
-}
-
-.credit {
-    font-family: arial;
-    color: #fff;
-    font-size: 16px;
-    font-weight: normal;
-    text-align: left;
-    text-shadow: 1px 2px 5px rgba(0, 0, 5, 0.2);
-    margin-left: 5%;
-    line-height: 1.3;
-    -moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -ms-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-}
-
-/* Buttons */
-.button {
-    width: 50%;
-    height: 50px;
-    margin: 0 auto 0 auto;
-    background: #ff9547;
-    text-align: center;
-    cursor: pointer;
-    -moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -ms-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-}
-
-.button:hover {
-    width: 60%;
-}
-
-.buttonmid {
-    width: 50%;
-    height: 50px;
-    margin: 0 auto 0 auto;
-    background: #333;
-    text-align: center;
-    cursor: pointer;
-    -moz-transition: all 0.4s ease-in-out;
-    -o-transition: all 0.4s ease-in-out;
-    -ms-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
-}
-
-.buttonmid:hover {
-    width: 60%;
-}
-
-.errorlist li {
-    color: red;
-}
-
-
-body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-}
-
-main {
-    flex: 1 0 auto;
-
-}
-
-main.container {
-    margin-bottom: 50px;
-}
-
-.footer-copyright {
-    overflow: hidden;
-    height: 50px;
-    line-height: 50px;
-    color: rgba(255, 255, 255, 0.8);
-    background-color: rgba(51, 51, 51, 0.08);
-}
+/* HOME */
+.row.home { margin-top: 50px; }
