--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -12,8 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	
-	<link href="{% static 'css/tema.css' %}" rel="stylesheet">
+	  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -24,7 +24,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,17 +33,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">MotoTrip</a>
+          <a class="navbar-brand" href="{% url 'index' %}"></a>
+          <img class="img-responsive" src="{% static 'img/mototrip_brand.png' %}" />
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Início</a></li>
-            {% if user.is_authenticated %}
-				<li><a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Logout</a></li>
-			{% else %}
-				<li><a href="{% url 'signup' %}">Cadastre-se</a></li>
-				<li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
-			{% endif %}
+          <ul class="nav navbar-nav pull-right">
+            <li class="active"><a href="{% url 'index' %}">Home</a></li>
+            <li class=""><a href="{% url 'index' %}">Como funciona</a></li>
+            <li class=""><a href="{% url 'index' %}">Contato</a></li>
+          {% if user.is_authenticated %}
+            <li class=""><a href="{% url 'index' %}">Comece uma viajem</a></li>
+				    <li><a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Logout</a></li>
+			    {% else %}
+				    <li><a href="{% url 'signup' %}">Cadastre-se</a></li>
+				    <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
+			    {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -61,12 +65,9 @@
 				{% endfor %}
 			</ul>
 		{% endif %}
-		
-	  	{% block content %}
+    	{% block content %}
 		{% endblock %}
       </div>
-	
-	
     </div><!-- /.container -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
