--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -1,8 +1,13 @@
 {% extends 'base/base.html' %}
 
-{% block title %}Início{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
-	<h1>Início</h1>
-	<p class="lead">Esse é um esqueleto de aplicação em Django 1.9.0.</p>	
+	<div class="row home">
+	  <div class="col-md-offset-1 col-md-4">
+	    <h1>PLANEJE SUA VIAJEM COM OS AMIGOS</h1>
+	  	<p class="lead">Crie rotas, organize grupos e compartilhe sua experiência na estrada</p>
+	  	<a href="#" class="btn btn-default">Comece uma viajem</a>
+	  </div>
+	</div>
 {% endblock %}
