--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -10,4 +10,12 @@
 	  	<a href="#" class="btn btn-default">Comece uma viajem</a>
 	  </div>
 	</div>
+	<div class="row como-funciona">
+	  <div class="col-md-12 text-center">
+	    <h1><i class="fa fa-road"></i></h1>
+  		<h2>CRIE SUA ROTA</h2>
+  		<p class="box">Trace sua rota e marque os pontos de parada do seu grupo.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+	  </div>
+	</div>
 {% endblock %}
