--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 	  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -52,12 +53,8 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
-<br><br><br>
-    <div class="container">
-	
-
-      <div class="starter-template">
+    <div class="container-fluid">
+	   <div class="starter-template">
 		{% if messages %}
 			<ul class="messages">
 				{% for message in messages %}
