--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,8 +1,12 @@
-body { background: url(../img/bg.jpg) no-repeat top ; background-size: cover; font-family: 'Lato', sans-serif; font-size: 16px; }
+body {  font-family: 'Lato', sans-serif; font-size: 16px; }
 .navbar.navbar-default{ padding: 10px; background-color: rgba(78,93,108,0.3); }
 ul.navbar-nav { margin-top: 20px; }
 h1 { font-size: 40px; font-weight: bold; }
-h2 { font-size: 20px; font-weight: bold; }
+h2 { font-size: 25px; font-weight: bold; color: #2B3C50; }
 
 /* HOME */
-.row.home { margin-top: 50px; }
+.row.home { padding: 180px 0 ;  background: url(../img/bg.jpg) no-repeat top; background-size: cover; }
+.row.como-funciona { background: #fff;}
+
+/* COMO FUNCIONA */
+.row.como-funciona i.fa {  width: 60px; height: 60px; border-radius: 60px; background: #2b3e50; padding-top: 7px; padding-left: 2px; }
