--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -14,8 +14,10 @@
 	  <div class="col-md-12 text-center">
 	    <h1><i class="fa fa-road"></i></h1>
   		<h2>CRIE SUA ROTA</h2>
-  		<p class="box">Trace sua rota e marque os pontos de parada do seu grupo.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  		<div class="center-block box">
+  			<p class="">Trace sua rota e marque os pontos de parada do seu grupo.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+  		</div>
 	  </div>
 	</div>
 {% endblock %}
