fixed layout forms

--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -5,19 +5,39 @@
 {% block content %}
 	<div class="row home">
 	  <div class="col-md-offset-1 col-md-4">
-	    <h1>PLANEJE SUA VIAJEM COM OS AMIGOS</h1>
+	    <h1>PLANEJE SUA VIAGEM COM OS AMIGOS</h1>
 	  	<p class="lead">Crie rotas, organize grupos e compartilhe sua experiência na estrada</p>
 	  	<a href="#" class="btn btn-default">Comece uma viajem</a>
 	  </div>
 	</div>
-	<div class="row como-funciona">
-	  <div class="col-md-12 text-center">
-	    <h1><i class="fa fa-road"></i></h1>
-  		<h2>CRIE SUA ROTA</h2>
-  		<div class="center-block box">
-  			<p class="">Trace sua rota e marque os pontos de parada do seu grupo.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-  		</div>
+	<div class="como-funciona">
+	  <div class="row">
+	    <div class="col-md-12 text-center">
+	      <h1><i class="fa fa-road"></i></h1>
+	      <h2>CRIE SUA ROTA</h2>
+	  	  <div class="center-block box">
+	  	    <p class="">Trace sua rota e marque os pontos de parada do seu grupo.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do  eiusmod
+	  		 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+	      </div>
+		</div>
+	  </div>
+	  <div class="row">
+	    <div class="col-md-12 text-center">
+	      <h1><i class="fa fa-users"></i></h1>
+	      <h2>ORGANIZE SEU GRUPO</h2>
+	  	  <div class="center-block box">
+	  	    <p class="">Organize e convide seu grupo de amigos para fazer a viajem com você. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+	      </div>
+		</div>
+	  </div>
+	  <div class="row">
+	    <div class="col-md-12 text-center">
+	      <h1><i class="fa fa-share-square-o"></i></h1>
+	      <h2>COMPARTILHE SUA EXPERIÊNCIA</h2>
+	  	  <div class="center-block box">
+	  	    <p class="">Crie lembretes para avisar outros motociclistas sobre as condições da estrada, condições climáticas, curvas perigosas entre outros.</p>
+	      </div>
+		</div>
 	  </div>
 	</div>
 {% endblock %}
