--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,44 +1,62 @@
-{% extends "base/base.html" %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="{% block description %}Esqueleto do Projeto{% endblock %}">
+	<meta name="author" content="{% block author %}Ikke/14{% endblock %}">
 
-{% block title %}Entrar{% endblock %}
-{% block content %}
+	<title>{% block title %}Início{% endblock %} - Projeto</title>
 
+	<!-- Bootstrap core CSS -->
+	<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
-<h1>Login</h1>
-<p>Efetue seu login para acessar o sistema.</p>
+	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <![endif]-->
+  </head>
 
-{% if form.errors %}
-<p>Seu usuário ou senha não combinam. Tente novamente</p>
-{% endif %}
+  <body>
+  	<div class="container login">
+  		<div class="box-login">
+  			<h1><img src="{% static 'img/mototrip_brand.png' %}"></h1>
 
+  			{% if form.errors %}
+  			<p>Seu usuário ou senha não combinam. Tente novamente</p>
+  			{% endif %}
+  			<form method="post" class="form-login"  action="{% url 'django.contrib.auth.views.login' %}">
+  				{% csrf_token %}
+  				<h2 class="form-login-heading text-center">COMECE SUA VIAGEM</h2>
+  				<div class="form-group">
+  					<label for="id_username" class="sr-only">Username</label>
+  					<input type="email" id="id_username" name="username" class="form-control input-lg" placeholder="Username" required autofocus>
+  				</div>
+  				<div class="form-group">
+  					<label for="id_password" class="sr-only">Password</label>
+  					<input type="password" id="id_password" name="password" class="form-control input-lg" placeholder="Password" required>
+  				</div>
+  				<button class="btn btn-lg btn-primary btn-block" type="submit">Confirmar</button>
+  				<input type="hidden" name="next" value="{{ next }}" />
 
-{% load socialaccount %}
-{% providers_media_js %}
-<a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Connect</a>
+  				{% load socialaccount %}
+  				{% providers_media_js %}
+  				<a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Connect</a>
 
-
-<ul class="socialaccount_providers">
-{% include "socialaccount/snippets/provider_list.html" with process="login" %}
-</ul>
-
- {% include "socialaccount/snippets/login_extra.html" %}
-
-
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
-{% csrf_token %}
-<table class='table'>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input class='btn btn-primary' type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-{% endblock %}
+  				<ul class="socialaccount_providers">
+  					{% include "socialaccount/snippets/provider_list.html" with process="login" %}
+  				</ul>
+  				{% include "socialaccount/snippets/login_extra.html" %}
+  			</form>
+  		</div>
+  	</div>
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+  </body>
+  </html>
