--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -12,8 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	
-	<link href="{% static 'css/tema.css' %}" rel="stylesheet">
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key={{ google_maps_embed_token }}&sensor=true"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -51,7 +50,7 @@
 
 <br><br><br>
     <div class="container">
-	
+
 
       <div class="starter-template">
 		{% if messages %}
@@ -61,16 +60,17 @@
 				{% endfor %}
 			</ul>
 		{% endif %}
-		
+
 	  	{% block content %}
 		{% endblock %}
       </div>
-	
-	
+
+
     </div><!-- /.container -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 
     {% block extrajs %}{% endblock %}
   </body>
