--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -4,5 +4,10 @@
 
 {% block content %}
 	<h1>Início</h1>
-	<p class="lead">Esse é um esqueleto de aplicação em Django 1.9.0.</p>	
+    <div id="map_canvas" style="width:100%; height:500px"></div>
+    <form id="init-route">
+        <input type="text" name="origin" placeholder="Endereço do ponto de partida">
+        <input type="text" name="destination" placeholder="Endereço do ponto de chegada">
+        <button type="submit">Enviar</button>
+    </form>
 {% endblock %}
