--- a/groups/templates/groups/group_add_member.html
+++ b/groups/templates/groups/group_add_member.html
@@ -1,1 +1,13 @@
 {% extends "base/base.html" %}
+
+
+{% block content %}
+	<form method="post" action="{% url 'group_add_members' %}">
+		<table>
+			{{ form }}
+		</table>
+
+		<button class="btn btn-primary">Cadastrar</button>
+
+	</form>
+{% endblock %}
