--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,6 +7,12 @@ h2 { font-size: 25px; font-weight: bold; color: #2B3C50; }
 /* LOGIN */
 .container.login .box-login { max-width: 450px; padding: 15px; margin: 0 auto; text-align: center; }
 .container.login .box-login .form-login { background: #FFF; padding:25px 50px; margin-top: 30px;}
+.container.login .box-login .form-login .social-logins { width: 100%; margin: 0; padding: 0; }
+.container.login .box-login .form-login .social-logins li { margin: 5px 0;}
+.container.login .box-login .form-login .social-logins li .btn-social { width: 100%; color: #FFF; }
+.container.login .box-login .form-login .social-logins li .btn-social.facebook { background: #3b579d; }
+.container.login .box-login .form-login .social-logins li .btn-social.twitter { background: #56d6fe; }
+.container.login .box-login .form-login .social-logins li .btn-social.google { background: #df4a32; }
 
 /* HOME */
 .row.home { padding: 180px 0 ;  background: url(../img/bg.jpg) no-repeat top; background-size: cover; }
