--- a/groups/templates/groups/group_add_member.html
+++ b/groups/templates/groups/group_add_member.html
@@ -2,11 +2,11 @@
 
 
 {% block content %}
-	<form method="post" action="{% url 'group_add_members' %}">
+	<form method="post" action="{% url 'group_add_members' pk %}">
 		<table>
 			{{ form }}
 		</table>
-
+		{% csrf_token %}
 		<button class="btn btn-primary">Cadastrar</button>
 
 	</form>
