--- a/base/templates/account/edit.html
+++ b/base/templates/account/edit.html
@@ -1,4 +1,6 @@
+{% extends 'base/base.html' %}
 
+{% block content %}
 <form method="post" action="">
 	<table class='table table-striped'>
 	{{ form }}
@@ -7,3 +9,4 @@
 	{% csrf_token %}
 	<button class='btn btn-primary'>Salvar Perfil</button>
 </form>
+{% endblock %}
