--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -7,11 +7,16 @@
 	
 
 	<h3>Meus Grupos</h3>
+		{% if user.group_access_set.all %}
 		<ul class="collection">
 			{% for agroup in user.group_access_set.all %}
 				<li class="collection-item"><i class="mdi-social-group"></i> <a href='{{ agroup.group.get_absolute_url }}'>{{ agroup.group.name }} </a></li>
 			{% endfor %}
 		</ul>
+		{% else %}
+			Você nao faz parte de nenhum grupo. <a href="{% url 'group_create' %}" class="teal-text accent-1">Clique aqui para criar um grupo.</a>
+		{% endif %}
+
 
 
 	<p class="lead">Você pode fazer várias coisas legais:</p>
