--- a/base/templates/base/signup.html
+++ b/base/templates/base/signup.html
@@ -1,18 +1,71 @@
-{% extends "base/base.html" %}
+{% extends "base/master.html" %}
 
 {% block title %}Cadastro de Usuário{% endblock %}
 
 {% block content %}
-<h1>Cadastro de Usuário</h1>
-<p>Preencha o formulário para criar um usuário.</p>
-<form method="post" action="{% url 'signup' %}">
-	{% csrf_token %}
-	<table class='table'>
-		{{ form }}
-	</table>
-
-	<input class='btn btn-primary' type="submit" value="login" />
-	<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
+<div class="row">
+	<div class="box-form">
+		<form class="form-horizontal" method="post" action="{% url 'signup' %}">
+			<h2>Cadastro de Usuário</h2>
+			{% csrf_token %}
+			<div class="form-group form-group-lg">
+				<label class="col-md-4 control-label" for="id_name">*Nome</label>
+				<div class="col-md-8">
+					<input class="form-control" type="text" id="id_name" name="name" required>
+				</div>
+			</div>
+			<div class="form-group form-group-lg">
+				<label class="col-md-4 control-label" for="id_username">*Nome de Usuário</label>
+				<div class="col-md-8">
+					<input class="form-control" type="text" id="id_username" name="username">
+				</div>
+			</div>
+			<div class="form-group form-group-lg">
+				<label class="col-md-4 control-label" for="id_password">*Senha</label>
+				<div class="col-md-8">
+					<input class="form-control" type="text" id="id_password" name="password" required>
+				</div>
+			</div>
+			<div class="form-group form-group-lg">
+				<label class="col-md-4 control-label" for="id_password2">*Confirmar Senha</label>
+				<div class="col-md-8">
+					<input class="form-control" type="text" id="id_password2" name="password2" required>
+				</div>
+			</div>
+			<div class="form-group form-group-lg">
+				<label class="col-md-4 control-label">
+					*Sexo
+				</label>
+				<div class="col-md-8">
+					<div class="radio-inline">
+						<label>
+							<input type="radio" name="sexo" id="id_sexo_m" value="m" checked>
+							Masculino
+						</label>
+					</div>
+					<div class="radio-inline">
+						<label>
+							<input type="radio" name="sexo" id="id_sexo_f" value="f">
+							Feminino
+						</label>
+					</div>
+				</div>
+			</div>
+			<div class="form-group form-group-lg">
+				<label class="col-md-4 control-label" for="id_city">*Cidade</label>
+				<div class="col-md-8">
+					<input class="form-control" type="text" id="id_city" name="city" required>
+				</div>
+			</div>
+			<div class="form-group form-group-lg">
+				<label class="col-md-4 control-label" for="id_state">*Estado</label>
+				<div class="col-md-8">
+					<input class="form-control" type="text" id="id_state" name="state" required>
+				</div>
+			</div>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Salvar</button>
+			<input type="hidden" name="next" value="{{ next }}" />
+		</form>
+	</div>
+</div>
 {% endblock %}
