--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,3 +21,13 @@ h2 { font-size: 25px; font-weight: bold; color: #2B3C50; }
 .como-funciona .row { background: #fff;}
 .como-funciona .row i.fa { width: 60px; height: 60px; border-radius: 60px; background: #2b3e50; padding-top: 7px; padding-left: 2px; }
 .como-funciona .row .box { width: 50%; color: #2B3C50; }
+
+/* System */
+body.system { background: #FFF; color: #2b3e50;}
+.system .row { padding-top: 80px; }
+.system .brand-small { height: 60px; }
+.system .navbar.navbar-default{ padding: 10px; background-color: rgb(78,93,108); }
+.system .row .box-form { max-width: 500px; margin: 0 auto; text-align: center; }
+.system .form-horizontal .form-group .control-label { color: #2B3C50; font-size: 16px; font-weight: bold;}
+.system .form-horizontal .form-group > div { padding-top: 8px; }
+.system .form-horizontal .form-group .radio-inline label { font-size: 14px; }
