--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -11,7 +11,7 @@
     <title>{% block title %}Início{% endblock %} - Projeto</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 	  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 	  <link href="{% static 'css/custom.css' %}" rel="stylesheet">
