--- a/groups/templates/groups/group_add_member.html
+++ b/groups/templates/groups/group_add_member.html
@@ -1,13 +1,17 @@
-{% extends "base/base.html" %}
+{% extends "base/master.html" %}
 
 
 {% block content %}
-	<form method="post" action="{% url 'group_add_members' pk %}">
-		<table>
-			{{ form }}
-		</table>
-		{% csrf_token %}
-		<button class="btn btn-primary">Cadastrar</button>
+<div class='row'>
+	<div class='col-md-8 col-md-offset-2'>
+		<form method="post" action="{% url 'group_add_members' pk %}">
+			<table>
+				{{ form }}
+			</table>
+			{% csrf_token %}
+			<button class="btn btn-primary">Cadastrar</button>
 
-	</form>
+		</form>
+	</div>
+</div>
 {% endblock %}
