--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,7 +1,9 @@
-{% extends 'base/base.html' %}
+{% extends 'base/master.html' %}
 
 
 {% block content %}
+<div class='row'>
+	<div class='col-md-8 col-md-offset-2'>
 	<h1>Criar Grupo</h1>
 
 	<form method='post' action='{% url "group_create" %}'>
@@ -12,5 +14,6 @@
 		<button class='btn btn-primary'>Cadastrar</button>
 		{% csrf_token %}
 	</form>
-	
+	</div>
+</div>
 {% endblock %}
