--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img class="img-responsive" src="{% static 'img/mototrip_brand.png' %}" />
+          <a href='{% url "index" %}'><img class="img-responsive" src="{% static 'img/mototrip_brand.png' %}" /></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
