--- a/groups/templates/groups/group_add_member.html
+++ b/groups/templates/groups/group_add_member.html
@@ -3,11 +3,10 @@
 
 {% block content %}
 <div class='row'>
-	<div class='col-md-8 col-md-offset-2'>
-		<form method="post" action="{% url 'group_add_members' pk %}">
-			<table>
-				{{ form }}
-			</table>
+	<div class='box-form'>
+		<form method="post" class='form-horizontal' action="{% url 'group_add_members' pk %}">
+			{% include "base/snippet.html" with form=form %}
+
 			{% csrf_token %}
 			<button class="btn btn-primary">Cadastrar</button>
 
