--- a/groups/templates/groups/group_add_member.html
+++ b/groups/templates/groups/group_add_member.html
@@ -5,8 +5,9 @@
 <div class='row'>
 	<div class='box-form'>
 		<form method="post" class='form-horizontal' action="{% url 'group_add_members' pk %}">
-			{% include "base/snippet.html" with form=form %}
-
+			<table>
+				{{ form }}
+			</table>
 			{% csrf_token %}
 			<button class="btn btn-primary">Cadastrar</button>
 
