--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -6,7 +6,7 @@
 	<div class='col-md-8 col-md-offset-2'>
 	<h1> {{ object.name }} </h1>
 
-	<p> {{ object.is_public }} </p>
+	<p>Grupo {% if object.is_public %}Público{% else %}Privado{% endif %}</p>
 
 	<h3>Membros:</h3>
 		{% if object.group_access_set.all %}
@@ -16,8 +16,15 @@
 				{% endfor %}
 			</ul>
 		{% else %}
-			Nenhum membro. Quer adicionar alguém?
+			Nenhum membro. Quer convidar alguém?
 		{% endif %}
+	
+	{% if not is_member %}
+		<a href='{% url "join_group" object.id %}'>Participar do Grupo</a>
+	{% else %}
+		<a href='{% url "leave_group" object.id %}'>Abandonar Grupo</a>
+	{% endif %}
+
 	</div>
 </div>
 {% endblock %}
