--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -12,16 +12,17 @@
 			{% endfor %}
 		</ul>
 		{% else %}
-			<div class="row">
-				<div class="col s12 m12">
-					<div class="card-panel blue">
-						<span class="white-text">
-							Você ainda não está participando de nenhum grupo.
-						</span>
-					</div>
-				</div>
-			</div>
-			{% endif %}
+			<span>
+				Você ainda não está participando de nenhum grupo.
+			</span>		
+	{% endif %}
+
+		<h1>Grupos Públicos</h1>
+		<ul>
+			{% for group in public_groups %}
+				<li class="collection-item"><i class="mdi-social-group"></i> <a href='{{ group.get_absolute_url }}'>{{ group.name }} </a></li>
+			{% endfor %}
+		</ul>
 
 		<a href="{% url 'group_create' %}" class="teal-text accent-1">Clique aqui para criar um grupo.</a>
 	</div>
