--- a/base/templates/trip/create.html
+++ b/base/templates/trip/create.html
@@ -1,5 +1,7 @@
 {% extends "base/master.html" %}
 
+{% load widget_tweak %}
+
 {% block content %}
 
 <div class="row">
@@ -8,13 +10,13 @@
 		<div class="form-group form-group-lg">
 			<label class="col-md-offset-2 col-md-2 control-label" for="id_name">Nome da viagem</label>
 			<div class="col-md-6">
-				<input class="form-control" type="text" id="id_name" name="nome" required>
+				<input class="form-control" type="text" id="id_name" name="name" required>
 			</div>
 		</div>
 		<div class="form-group form-group-lg">
 			<label class="col-md-offset-2 col-md-2 control-label" for="id_partida">Local de partida</label>
 			<div class="col-md-6">
-				<input class="form-control" type="text" id="id_partida" name="partida" required>
+				<input class="form-control" type="text" id="id_start_point" name="start_point" required>
 			</div>
 		</div>
 		<div class="form-group form-group-lg">
@@ -43,11 +45,11 @@
 		</div>
 		<div class="form-group">
 			<div class="col-md-offset-4 col-md-6">
-				<button class="btn btn-lg btn-primary pull-right" type="submit">Avançar</button>	
+				<button class="btn btn-lg btn-primary pull-right" type="submit">Avançar</button>
 			</div>
-			
+
 		</div>
-		
+
 	</form>
 </div>
 {% endblock %}
