Agora foi #chatiado

--- a/base/templates/trip/create.html
+++ b/base/templates/trip/create.html
@@ -22,13 +22,13 @@
 		<div class="form-group form-group-lg">
 			<label class="col-md-offset-2 col-md-2 control-label" for="id_chegada">Local de chegada</label>
 			<div class="col-md-6">
-				<input class="form-control" type="text" id="id_chegada" name="chegada" required>
+				<input class="form-control" type="text" id="id_end_point" name="end_point" required>
 			</div>
 		</div>
 		<div class="form-group form-group-lg">
 			<label class="col-md-offset-2 col-md-2 control-label" for="id_data_partida">Data de partida</label>
 			<div class="col-md-6">
-				<input class="form-control" type="date" id="id_data_partida" name="data_partida" required>
+				<input class="form-control" type="date" id="id_start_at" name="start_at" required>
 			</div>
 		</div>
 		<div class="form-group form-group-lg">
