--- a/base/templates/trip/_route.html
+++ b/base/templates/trip/_route.html
@@ -5,6 +5,9 @@
 {% block content %}
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
+        <input type="hidden" id="trip" value="{{ trip.id }}">
+        <input type="hidden" id="route">
+        {% csrf_token %}
         <form id="init-route">
             <input type="text" name="origin" class="form-control" placeholder="Endereço do ponto de partida" value="{{ trip.start_point }}">
             <input type="text" name="destination" class="form-control" placeholder="Endereço do ponto de chegada" value="{{ trip.end_point }}">
