--- a/base/templates/base/master.html
+++ b/base/templates/base/master.html
@@ -16,7 +16,7 @@
   <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/custom.css' %}" rel="stylesheet">
 
-  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key={{ google_maps_embed_token }}&sensor=true"></script>
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key={{ google_maps_embed_token }}&sensor=true&libraries=places"></script>
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
