--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -57,6 +57,7 @@
   				{% include "socialaccount/snippets/login_extra.html" %}
   				<button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
   				<input type="hidden" name="next" value="{{ next }}" />
+          <a href="signup">Cadastre-se</a>
   			</form>
   		</div>
   	</div>
