--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -10,7 +10,7 @@
 	  	<a href="#" class="btn btn-default">Comece uma viajem</a>
 	  </div>
 	</div>
-	<div class="como-funciona">
+	<div id="como-funciona" class="como-funciona">
 	  <div class="row">
 	    <div class="col-md-12 text-center">
 	      <h1><i class="fa fa-road"></i></h1>
