--- a/base/templates/base/master.html
+++ b/base/templates/base/master.html
@@ -36,10 +36,14 @@
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
+              {% if user.is_authenticated %}
               <li><a href="{% url 'index' %}">Perfil</a></li>
               <li><a href="{% url 'index' %}">Roteiros</a></li>
               <li><a href="{% url 'index' %}">Grupos</a></li>
               <li><a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Logout</a></li>
+              {% else %}
+              <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
+              {% endif %}
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -55,6 +59,7 @@
           {% block content %}
           {% endblock %}
       </div><!-- /.container -->
+      <footer></footer>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
       <script src="{% static 'js/bootstrap.min.js' %}"></script>
