--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -24,9 +24,9 @@
 	<br>
 	<p class="lead">Você pode fazer várias coisas legais:</p>
 	<ul>
-		<li><a href="{% url 'groups' %}">Gerenciar seus Grupos</a></li>
+		<li><a href="{% url 'groups' %}">Participar de um Grupo</a></li>
 		<li><a href="{% url 'edit_profile' %}">Completar seu Perfil</a></li>
-		<li><a href="">Comecar uma Viagem</a></li>
+		<li><a href="{% url 'trip_list' %}">Comecar uma Viagem</a></li>
 	</ul>
 	</div>
 </div>
