--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -4,6 +4,9 @@
 {% block content %}
 <div class='row'>
 	<div class='col-md-8 col-md-offset-2'>
+
+		<p>Você pode escolher um dos grupos já existentes ou criar seu próprio grupo. Ao entrar em um grupo você terá a općao de criar seus próprios roteiros de viagem.</p>
+		
 		<div class='col-md-6'>
 	<h1>Meus Grupos</h1>
 	 {% if object_list %}
