--- a/groups/templates/groups/trip_list.html
+++ b/groups/templates/groups/trip_list.html
@@ -4,6 +4,9 @@
 	<div class="row">
 
 		<div class='col-md-8 col-md-offset-2'>
+
+			<p>Para criar um roteiro é necessário fazer parte de algum grupo. Caso você ainda não faća parte de um grupo, você pode criar o seu grupo na aba "Grupos".</p>
+
 			<div class='col-md-6'>
 				<h1>Meus Roteiros</h1>
 				{% for agroup in grupos %}
@@ -26,7 +29,7 @@
 
 				<ul>
 					{% for trip in publicos %}
-							<li><a href="">{{ trip.name }}</a></li>
+							<li><a href="{% url %}">{{ trip.name }}</a></li>
 					{% endfor %}
 				</ul>
 			</div>
