--- a/groups/templates/groups/trip_list.html
+++ b/groups/templates/groups/trip_list.html
@@ -29,7 +29,7 @@
 
 				<ul>
 					{% for trip in publicos %}
-							<li><a href="{% url %}">{{ trip.name }}</a></li>
+							<li><a href="#">{{ trip.name }}</a></li>
 					{% endfor %}
 				</ul>
 			</div>
