--- a/groups/templates/groups/trip_list.html
+++ b/groups/templates/groups/trip_list.html
@@ -5,6 +5,8 @@
 
 		<div class='col-md-8 col-md-offset-2'>
 
+			<h1>Roteiros</h1>
+			
 			<p>Para criar um roteiro é necessário fazer parte de algum grupo. Caso você ainda não faća parte de um grupo, você pode criar o seu grupo na aba "Grupos".</p>
 
 			<div class='col-md-6'>
