--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{% block description %}Esqueleto do Projeto{% endblock %}">
-    <meta name="author" content="{% block author %}Ikke/14{% endblock %}">
+    <meta name="description" content="{% block description %}MotoTrip - Share new Roads{% endblock %}">
+    <meta name="author" content="{% block author %}MotoTrip - #hackinpoa{% endblock %}">
 
-    <title>{% block title %}Início{% endblock %} - Projeto</title>
+    <title>{% block title %}Início{% endblock %} - MotoTrip</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
