--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -43,7 +43,7 @@
             <li><a title="Google" class="btn btn-lg btn-social google" href="/accounts/google/login/?process=login"><i class="fa fa-google-plus"></i> Google</a></li>
           </ul>
 
-          <h2 class="form-login-heading text-center">CONTA ROADTRIP</h2>
+          <h2 class="form-login-heading text-center">CONTA MOTOTRIP</h2>
   				<div class="form-group">
   					<label for="id_username" class="sr-only">Usuário</label>
   					<input type="text" id="id_username" name="username" class="form-control input-lg" placeholder="Usuário" required autofocus>
